--- a/docs/book.toml
+++ b/docs/book.toml
@@ -1,7 +1,7 @@
 [book]
 title = "API mock (apimock-rs) Docs"
 authors = ["nabbisen<nabbisen@scqr.net>"]
-description = "API mock (apimock-rs) Docs: A developer-friendly, robust and functional HTTP mock server built in Rust."
+description = "API mock (apimock-rs) Docs: A developer-friendly, featherlight and functional HTTP mock server built in Rust."
 
 language = "en"
 multilingual = false
