--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,9 +1,9 @@
 [package]
 name = "apimock"
-version = "4.2.3"
+version = "4.3.0"
 edition = "2021"
 
-description = "A developer-friendly, robust and functional HTTP mock server built in Rust."
+description = "A developer-friendly, featherlight and functional HTTP mock server built in Rust."
 authors = ["nabbisen <nabbisen@scqr.net>"]
 license = "Apache-2.0"
 
