--- a/npm/package.json
+++ b/npm/package.json
@@ -1,7 +1,7 @@
 {
   "name": "apimock-rs",
-  "version": "4.2.3",
-  "description": "A developer-friendly, robust and functional HTTP mock server built in Rust.",
+  "version": "4.3.0",
+  "description": "A developer-friendly, featherlight and functional HTTP mock server built in Rust.",
   "author": "nabbisen<nabbisen@scqr.net>",
   "license": "Apache-2.0",
   "repository": {
@@ -19,9 +19,9 @@
     "postinstall": "node postinstall.js"
   },
   "optionalDependencies": {
-    "@apimock-rs/bin-linux-x64-gnu": "4.2.3",
-    "@apimock-rs/bin-darwin-arm64": "4.2.3",
-    "@apimock-rs/bin-win32-x64-msvc": "4.2.3"
+    "@apimock-rs/bin-linux-x64-gnu": "4.3.0",
+    "@apimock-rs/bin-darwin-arm64": "4.3.0",
+    "@apimock-rs/bin-win32-x64-msvc": "4.3.0"
   },
   "keywords": [
     "api",
