--- a/.github/workflows/docs.yaml
+++ b/.github/workflows/docs.yaml
@@ -29,8 +29,10 @@ jobs:
         uses: actions/checkout@v4
       
       - name: Install mdBook and extension(s)
+        # todo: mdbook v0.5 support (#176)
+        # MDBOOK_URL=$(curl -sL https://api.github.com/repos/rust-lang/mdBook/releases/latest
         run: |
-          MDBOOK_URL=$(curl -sL https://api.github.com/repos/rust-lang/mdBook/releases/latest \
+          MDBOOK_URL=$(curl -sL https://api.github.com/repos/rust-lang/mdBook/releases/tags/v0.4.52 \
           | jq -r '.assets[] | select(.name | test("x86_64-unknown-linux-gnu\\.tar\\.gz$")) | .browser_download_url')
           echo mdbook: $MDBOOK_URL
           curl -L $MDBOOK_URL | tar -xz
