--- a/examples/config/default/apimock.toml
+++ b/examples/config/default/apimock.toml
@@ -4,8 +4,14 @@
 [listener]
 ip_address = "127.0.0.1"
 port = 3001
+# [listener.tls]
+# cert = "./cert.pem"
+# key = "./key.pem"
+# # port = 3002
+
 [log]
 verbose = { header = true, body = true }
+
 [service]
 rule_sets = ["apimock-rule-set.toml"]
 # middlewares = []
