ref #95 https tests; fix #177 tests now migrated to reqwest from hyper client

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -49,5 +49,6 @@ csv = "1"
 rhai = { version = "1", features = ["sync", "serde"] }
 
 [dev-dependencies]
-hyper = { version = "1", features = ["client"] }
-rand = "0"
+rand = "^0"
+reqwest = "^0"
+rcgen = "^0"
