--- a/.gitignore
+++ b/.gitignore
@@ -12,3 +12,7 @@ target/
 
 # MSVC Windows builds of rustc generate these, which store debugging information
 *.pdb
+
+# --- custom ---
+/tests/fixtures/tmp/*
+!/tests/fixtures/tmp/.gitkeep
