--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,7 +3,7 @@ name = "apimock"
 version = "4.4.0"
 edition = "2021"
 
-description = "A developer-friendly, featherlight and functional HTTP mock server built in Rust."
+description = "A developer-friendly, featherlight and functional HTTP(S) mock server built in Rust."
 authors = ["nabbisen <nabbisen@scqr.net>"]
 license = "Apache-2.0"
 
