--- a/npm/darwin-arm64/package.json
+++ b/npm/darwin-arm64/package.json
@@ -10,7 +10,7 @@
   "files": [
     "apimock"
   ],
-  "description": "A developer-friendly, featherlight and functional HTTP mock server built in Rust.",
+  "description": "A developer-friendly, featherlight and functional HTTP(S) mock server built in Rust.",
   "author": "nabbisen<nabbisen@scqr.net>",
   "license": "Apache-2.0",
   "repository": {
