--- a/npm/package.json
+++ b/npm/package.json
@@ -1,7 +1,7 @@
 {
   "name": "apimock-rs",
   "version": "4.4.0",
-  "description": "A developer-friendly, featherlight and functional HTTP mock server built in Rust.",
+  "description": "A developer-friendly, featherlight and functional HTTP(S) mock server built in Rust.",
   "author": "nabbisen<nabbisen@scqr.net>",
   "license": "Apache-2.0",
   "repository": {
