--- a/examples/config/tests/listener/tls/apimock.toml
+++ b/examples/config/tests/listener/tls/apimock.toml
@@ -10,4 +10,4 @@ verbose = { header = false, body = false }
 [service]
 rule_sets = []
 # middlewares = []
-fallback_respond_dir = "../apimock-dyn-route"
+fallback_respond_dir = "../../apimock-dyn-route"
