--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "apimock"
-version = "4.5.0"
+version = "4.5.1"
 edition = "2021"
 
 description = "A developer-friendly, featherlight and functional HTTP(S) mock server built in Rust."
@@ -50,6 +50,6 @@ rhai = { version = "1", features = ["sync", "serde"] }
 
 [dev-dependencies]
 rand = "^0"
-reqwest = "^0"
+reqwest = { version = "0", default-features = false, features = ["rustls-tls"] }
 rcgen = "^0"
 local-ip-address = "^0"
