--- a/.github/workflows/release-executable.yaml
+++ b/.github/workflows/release-executable.yaml
@@ -186,6 +186,6 @@ jobs:
       - name: npm publish
         working-directory: npm
         run: |
-          env npm_config_ignore_scripts=true npm install --package-lock-only
-          npm ci
+          npm install --package-lock-only --ignore-scripts
+          npm ci --ignore-scripts
           npm publish
